# capabilityapi

./: .env  .gitignore  Cargo.toml  README.md  cap.db  example.sh  sqlx-data.json
configuration/: base.yaml
migrations/: 20210906174703_Create_database.sql
src/: auth.rs  capabilities.rs  configuration.rs  database.rs  lib.rs  main.rs  model.rs  routes.rs  startup.rs
src/domain/: model.rs
src/routes/: users.rs
tests/api/: cap.rs  helpers.rs  main.rs  users.rs
