[package]
name = "capabilityapi"
version = "0.1.0"
edition = "2021"
authors = ["Kenneth Fossen <kenneth.fossen@uib.no>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.0.0-beta.9"
actix-web = "4.0.0-beta.8"
anyhow = "1.0.43"
async-trait = "0.1.51"
claim = "0.5.0"
config = "0.11.0"
env_logger = "0.9.0"
serde = { version = "1.0.130", features = ["derive"] }
serde-aux = "2.3.0"
serde_json = "1.0.67"
sqlx = { version = "0.5.7", features = ["migrate","runtime-actix-rustls","offline","macros", "sqlite"]}
tokio = { version = "1.11.0", features = ["full"] }
unicode-segmentation = "1.8.0"
