[package]
name = "capabilityapi"
version = "0.1.0"
edition = "2021"
authors = ["Kenneth Fossen <kenneth.fossen@uib.no>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.0.0-beta.11"
actix-web = "4.0.0-beta.10"
actix-web-httpauth = "0.6.0-beta.3"
anyhow = "1.0.44"
async-trait = "0.1.51"
claim = "0.5.0"
config = "0.11.0"
env_logger = "0.9.0"
serde = { version = "1.0.130", features = ["derive"] }
serde-aux = "3.0.1"
serde_json = "1.0.68"
sqlx = { version = "0.5.9", features = ["migrate","runtime-actix-rustls","offline","macros", "sqlite", "postgres"] }
tokio = { version = "1.12.0", features = ["full"] }
unicode-segmentation = "1.8.0"
capabilities = { path = "../capabilities" }

[dev-dependencies]
actix-rt = "2.3.0"
reqwest = "0.11.6"
