[package]
name = "capabilityapi"
version = "0.1.0"
edition = "2021"
authors = ["Kenneth Fossen <kenneth.fossen@uib.no>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.0.4"
actix-web = "4.0.1"
actix-web-httpauth = "0.6.0"
anyhow = "1.0.57"
async-trait = "0.1.53"
claim = "0.5.0"
config = "0.11.0"
env_logger = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde-aux = "3.0.1"
serde_json = "1.0.79"
sqlx = { version = "0.5.13", features = ["migrate","runtime-actix-rustls","offline","macros", "sqlite", "postgres"] }
tokio = { version = "1.18.0", features = ["full"] }
unicode-segmentation = "1.9.0"
# capabilities = { path = "../capabilities" }

[dev-dependencies]
actix-rt = "2.7.0"
reqwest = "0.11.10"
